[gd_scene load_steps=2 format=3 uid="uid://bx3k5h7j2nawq"]

[ext_resource type="Script" path="res://scripts/TukomGeneratorUI.gd" id="1_tukom_ui_script"]

[node name="TukomGeneratorUI" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_tukom_ui_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TulikomentLabel" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "Tulikomentoja"
vertical_alignment = 1

[node name="Separator1" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "|"
vertical_alignment = 1

[node name="CoordLabel" type="Label" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 18
text = ""
vertical_alignment = 1

[node name="Separator2" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "|"
vertical_alignment = 1

[node name="PiiruButton" type="Button" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 18
text = ""
flat = true

[node name="AddBearingPrompt" type="Label" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0, 1)
theme_override_font_sizes/font_size = 14
text = "ADD BEARING"
horizontal_alignment = 1
vertical_alignment = 1
visible = false

[node name="Separator3" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "|"
vertical_alignment = 1

[node name="DistanceLabel" type="Label" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 18
text = ""
horizontal_alignment = 1
vertical_alignment = 1

[node name="Separator4" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "|"
vertical_alignment = 1

[node name="TulimuotoLabel" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "3 kertaa"
vertical_alignment = 1

[node name="Separator5" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "|"
vertical_alignment = 1

[node name="SuoritusosaLabel" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "ampukaa!"
vertical_alignment = 1

[node name="Separator6" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "|"
vertical_alignment = 1

[node name="FireButton" type="Button" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
disabled = true
text = "FIRE"
